Merging generation of launchers for MacOS and Windows