@@ -849,9 +849,9 @@ public final class VFSUtils {
 		}
 	}
 
-	private static boolean checkWinLauncherJavaPath(Path venvCfg, Path java) {
+	private static boolean checkPyVenvCfgFile(Path pyVenvCfg, Path java) {
 		try {
-			for (String line : Files.readAllLines(venvCfg)) {
+			for (String line : Files.readAllLines(pyVenvCfg)) {
 				if (line.trim().startsWith("venvlauncher_command = " + java)) {
 					return true;
 				}
@@ -872,11 +872,16 @@ public final class VFSUtils {
 		Path java = Paths.get(System.getProperty("java.home"), "bin", "java");
 		String classpath = String.join(File.pathSeparator, launcherArgs.computeClassPath());
 		String extraJavaOptions = String.join(" ", GraalPyRunner.getExtraJavaOptions());
-		if (IS_MAC) {
+		if (IS_MAC || IS_WINDOWS) {
+			if (Files.exists(launcherArgs.launcherPath) && checkPyVenvCfgFile(launcherArgs.launcherPath.getParent().resolve("pyvenv.cfg"), java)) {
+				return;
+			}
+			var launcherFolder = IS_WINDOWS ? "nt" : "macos";
+			var launcherName = IS_WINDOWS ? "graalpy.exe" : "graalpy";
 			var script = formatMultiline("""
 					import os, shutil, struct, venv
 					from pathlib import Path
-					vl = os.path.join(venv.__path__[0], 'scripts', 'macos', 'graalpy')
+					vl = os.path.join(venv.__path__[0], 'scripts', '%s', '%s')
 					tl = os.path.join(r'%s')
 					os.makedirs(Path(tl).parent.absolute(), exist_ok=True)
 					shutil.copy(vl, tl)
@@ -885,7 +890,7 @@ public final class VFSUtils {
 					with open(pyvenvcfg, 'w', encoding='utf-8') as f:
 					    f.write('venvlauncher_command = ')
 					    f.write(cmd)
-					""", launcherArgs.launcherPath, java, extraJavaOptions, classpath, GRAALPY_MAIN_CLASS);
+					""", launcherFolder, launcherName, launcherArgs.launcherPath, java, extraJavaOptions, classpath, GRAALPY_MAIN_CLASS);
 			File tmp;
 			try {
 				tmp = File.createTempFile("create_launcher", ".py");
@@ -906,7 +911,7 @@ public final class VFSUtils {
 				throw new IOException("failed to run Graalpy launcher", e);
 			}
 		}
-		else if (!IS_WINDOWS) {
+		else {
 			// we do not bother checking if it exists and has correct java home, since it is
 			// simple
 			// to regenerate the launcher
@@ -922,40 +927,6 @@ public final class VFSUtils {
 				Files.setPosixFilePermissions(launcherArgs.launcherPath, perms);
 			} catch (IOException e) {
 				throw new IOException(String.format("failed to create launcher %s", launcherArgs.launcherPath), e);
-			}
-		} else if (!Files.exists(launcherArgs.launcherPath)
-				|| !checkWinLauncherJavaPath(launcherArgs.launcherPath.getParent().resolve("pyenv.cfg"), java)) {
-			// on windows, generate a venv launcher that executes the java command
-			var script = formatMultiline("""
-					import os, shutil, struct, venv
-					from pathlib import Path
-					vl = os.path.join(venv.__path__[0], 'scripts', 'nt', 'graalpy.exe')
-					tl = os.path.join(r'%s')
-					os.makedirs(Path(tl).parent.absolute(), exist_ok=True)
-					shutil.copy(vl, tl)
-					cmd = r'%s --enable-native-access=ALL-UNNAMED %s -classpath "%s" %s'
-					pyvenvcfg = os.path.join(os.path.dirname(tl), "pyvenv.cfg")
-					with open(pyvenvcfg, 'w', encoding='utf-8') as f:
-					    f.write('venvlauncher_command = ')
-					    f.write(cmd)
-					""", launcherArgs.launcherPath, java, extraJavaOptions, classpath, GRAALPY_MAIN_CLASS);
-			File tmp;
-			try {
-				tmp = File.createTempFile("create_launcher", ".py");
-			} catch (IOException e) {
-				throw new IOException("failed to create tmp launcher", e);
-			}
-			tmp.deleteOnExit();
-			try (var wr = new FileWriter(tmp, StandardCharsets.UTF_8)) {
-				wr.write(script);
-			} catch (IOException e) {
-				throw new IOException(String.format("failed to write tmp launcher %s", tmp), e);
-			}
-
-			try {
-				GraalPyRunner.run(classpath, log, tmp.getAbsolutePath());
-			} catch (InterruptedException e) {
-				throw new IOException("failed to run Graalpy launcher", e);
 			}
 		}
 	}
